5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1635_1054.log
== TEST (2019-04-08 12:54:16) 
-- CODE:
X= float(input("Digite uma coordenada: "))
Y = float(input("Digite uma coordenada: "))

if (2 * x + y - 3 == 0):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (2 * x + y - 3 == 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 12:54:29) 
-- CODE:
X= float(input("Digite uma coordenada: "))
Y = float(input("Digite uma coordenada: "))

if (2 * X + Y- 3 == 0):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 12:54:36) 
-- CODE:
X= float(input("Digite uma coordenada: "))
Y = float(input("Digite uma coordenada: "))

if (2 * X + Y- 3 == 0):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- EXECUTION TIME:
0.141715
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
